docs(i18n): update new year page title for consistency
Simplify the title format across languages to use a more generic "Chinese New Year" phrasing instead of the specific year reference

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -35,7 +35,7 @@
   },
   "home": {
     "meta": {
-      "title": "2026 Year of the Horse - Gudupao Spark Official New Year Page",
+      "title": "Chinese Newyear - Gudupao",
       "description": "Gudupao Spark 2026 Year of the Horse Chinese New Year Official Celebration Page. Prosperity and success."
     },
     "hero": {
