--- a/app/i18n/locales/zh.json
+++ b/app/i18n/locales/zh.json
@@ -35,7 +35,7 @@
   },
   "home": {
     "meta": {
-      "title": "2026 丙午马年 - Gudupao Spark 官方新年单页",
+      "title": "中国新年 - Gudupao",
       "description": "Gudupao Spark 2026 马年中国新年官方庆祝单页，龙腾盛世，马到成功。"
     },
     "hero": {
