docs(i18n): update Chinese New Year title in zh locale
Change "中国新年" to "春节" for more culturally accurate terminology

--- a/app/i18n/locales/zh.json
+++ b/app/i18n/locales/zh.json
@@ -35,7 +35,7 @@
   },
   "home": {
     "meta": {
-      "title": "中国新年 - Gudupao",
+      "title": "春节 - Gudupao",
       "description": "Gudupao Spark 2026 马年中国新年官方庆祝单页，龙腾盛世，马到成功。"
     },
     "hero": {
